Scoped Values com problema